<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/tv_username_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_code"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:textColorHint="#3678FB"
            android:textSize="15sp" />
        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/tv_error_user_name"
            android:visibility="gone"
            android:paddingStart="12dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            android:textColor="#FB0505"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/tv_email_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_code"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColorHint="#3678FB"
            android:textSize="15sp" />
        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/tv_error_email"
            android:visibility="gone"
            android:paddingStart="12dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            android:textColor="#FB0505"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/tv_password_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_code"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColorHint="#3678FB"
            android:textSize="15sp" />
        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/tv_error_pass"
            android:visibility="gone"
            android:paddingStart="12dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            android:textColor="#FB0505"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/tv_confirm_password_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_code"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColorHint="#3678FB"
            android:textSize="15sp" />
        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/tv_error_confirm_pass"
            android:visibility="gone"
            android:paddingStart="12dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            android:textColor="#FB0505"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edittext_search"
            android:backgroundTint="@color/oneColor"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@null" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signup" />

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:text="Bạn đã có tài khoản ? Đăng nhập"
        android:textColor="#F44336"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>